=== HEAD

* Ignore any previously selected columns when using Dataset#graph for the first time (jeremyevans)

* Dataset#graph now accepts a block which is passed to join_table (jeremyevans)

* Make Dataset#columns ignore any filtering, ordering, and distinct clauses (jeremyevans)

* Use the safer connection-specific string escaping methods for PostgreSQL (jeremyevans)

* Database#transaction now yields a connection when using the Postgres adapter, just like it does for other adapters (jeremyevans)

* Dataset#count now works for a limited dataset (divoxx)

* Database#add_index is now supported in the SQLite adapter (abhay)

* Sequel's MySQL adapter should no longer conflict with ActiveRecord's use of MySQL (careo)

* Treat Hash as expression instead of column alias when used in DISTINCT, ORDER BY, and GROUP BY clauses (jeremyevans)

* PostgreSQL bytea fields are now fully supported (dlee)

* For PostgreSQL, don't raise an error when assigning a value to a SERIAL PRIMARY KEY field when inserting records (jeremyevans)

=== 2.1.0 (2008-06-17)

* Support bitwise operators for NumericExpressions: &, |, ^, ~, <<, >> (jeremyevans)

* No longer raise an error for Dataset#filter(true) or Dataset#filter(false) (jeremyevans)

* Allow Dataset #filter, #or, #exclude and other methods that call them to use both the block and regular arguments (jeremyevans)

* ParseTree support is now officially deprecated, use Sequel.use_parse_tree = false to use the expression (blockless) filters inside blocks (jeremyevans)

* Remove :pool_reuse_connections ConnectionPool/Database option, MySQL users need to be careful with nested queries (jeremyevans)

* Allow Dataset#graph :select option to take an array of columns to select (jeremyevans)

* Allow Dataset#to_hash to be called with only one argument, allowing for easy creation of lookup tables for a single key (jeremyevans)
